Changelog
=========

2020.4.0 (unreleased)
---------------------

- Make creating favorites more robust in case of workflow issues. [deiferni]
- Improve response history for (automatically) opened subtasks in sequential task templates. [mbaechtold]
- Fix contenttree.js so that it is also supported by IE. [njohner]
- Expose the url to the user's private folder in the `@config` API endpoint. Serves as feature flag too. [mbaechtold]
- Also allow replacing concrete responsibles with interactive responsibles when triggering task templates. [deiferni]
- Remove cross-tab logout functionality. [lgraf]
- Add @@logout view to clear Plone session and redirect to CAS logout if necessary. [lgraf]
- Introduce a new property `touched` on dossiers. [mbaechtold]
- Add support for metadata_fields in OpengeverRealContentListingObject. [njohner]
- Fix linking to proposal/submitted proposal from documents in various places. [deiferni]
- Fix sort order within task template folder. [mbaechtold]
- Fix deadline of task templates no longer shown in tabular listing. [mbaechtold]
- Fix permission issue with resolving subtask of tasktemplates. [njohner]
- Add API expansion `main-dossier`. [mbaechtold]
- Make "populate_filename_column_in_favorites" UpgradeStep more robust. [lgraf]
- Disable the searchbox on the tabbed view which lists the versions of a document. [mbaechtold]
- Include additional data in @responses GET for proposal responses. [njohner]
- Include additional data in Proposal GET API endpoint. [njohner]
- Allow `trashed` as field in @listing endpoint. [tinagerber]
- Add API endpoint `@trigger-task-template` to create tasks in a dossier from a template. [deiferni]
- Extend the @favorites endpoint to let it return already resolved favorites. [elioschmutz]
- Use correct response type for proposal comment responses. [njohner]
- Add expandable endpoint @tasktree for getting task hierarchy. [buchi]
- Also normalise filename of original_message when present. [tinagerber]

